--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.19.0",
+    "cords": "^1.0.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "math-floor": "^1.0.1",
     "moment": "^2.29.1",
-    "mongoose": "^5.10.8"
+    "mongoose": "^5.10.8",
+    "morgan": "^1.10.0"
   }
 }
